--- a/VideoLLaMA2Pipeline.ipynb
+++ b/VideoLLaMA2Pipeline.ipynb
@@ -66,39 +66,18 @@
     "    \"\"\"Run VideoLLaMA2 inference on a single video.\"\"\"\n",
     "    try:\n",
     "        disable_torch_init()\n",
-    "\n",
-    "        few_shot_prompt = \"\"\"\n",
-    "        Example 1:\n",
-    "        Input: A video showing a person putting an item into their bag and walking out without paying.\n",
-    "        Instruction: Is there an indication of suspicious store activity in this video such as shoplifting or not. Reply only with Yes or No\n",
-    "        Output: Yes\n",
-    "\n",
-    "        Example 2:\n",
-    "        Input: A video showing a person examining items, putting one back, and proceeding to the checkout.\n",
-    "        Instruction: Is there an indication of suspicious store activity in this video such as shoplifting or not. Reply only with Yes or No\n",
-    "        Output: No\n",
-    "\n",
-    "        Example 3:\n",
-    "        Input: A video showing a person concealing an item in their coat while looking around nervously.\n",
-    "        Instruction: Is there an indication of suspicious store activity in this video such as shoplifting or not. Reply only with Yes or No\n",
-    "        Output: Yes\n",
-    "        \n",
-    "        Now analyze this input:\n",
-    "        \"\"\"\n",
     "        \n",
     "        instruct = \"\"\"\n",
     "            Is there an indication of suspicious store activity in this video such as shoplifting or not. \n",
     "            Reply only with Yes or No\n",
     "        \"\"\"\n",
-    "\n",
-    "        combined_instruct = f\"{few_shot_prompt}\\nInstruction: {instruct}\"\n",
     "        \n",
     "        model_path = 'DAMO-NLP-SG/VideoLLaMA2.1-7B-16F'\n",
     "        model, processor, tokenizer = model_init(model_path)\n",
     "        \n",
     "        output = mm_infer(\n",
     "            processor['video'](video_path), \n",
-    "            combined_instruct, \n",
+    "            instruct, \n",
     "            model=model, \n",
     "            tokenizer=tokenizer, \n",
     "            do_sample=False, \n",
@@ -173,17 +152,19 @@
     "    print(f\"\\nResults saved to {output_csv}\")\n",
     "    return df\n",
     "\n",
-    "VIDEO_DIR = \"/home/ubuntu/content/drive/MyDrive/shoplifting-videos\"  \n",
-    "OUTPUT_CSV = \"videollama_results.csv\"\n",
-    "MAX_DURATION = 30\n",
+    "# Usage example\n",
+    "if __name__ == \"__main__\":\n",
+    "    VIDEO_DIR = \"/home/ubuntu/content/drive/MyDrive/shoplifting-videos\"  \n",
+    "    OUTPUT_CSV = \"videollama_results.csv\"\n",
+    "    MAX_DURATION = 30 \n",
     "\n",
-    "results_df = process_video_directory(VIDEO_DIR, OUTPUT_CSV, MAX_DURATION)\n",
-    "\n",
-    "print(\"\\nAnalysis Summary:\")\n",
-    "print(f\"Total videos processed: {len(results_df)}\")\n",
-    "print(f\"Videos trimmed: {len(results_df[results_df['trimmed']])}\")\n",
-    "print(f\"Anomalies detected: {len(results_df[results_df['anomaly'] == 'Yes'])}\")\n",
-    "print(f\"Processing errors: {len(results_df[results_df['anomaly'] == 'ERROR'])}\")"
+    "    results_df = process_video_directory(VIDEO_DIR, OUTPUT_CSV, MAX_DURATION)\n",
+    "    \n",
+    "    print(\"\\nAnalysis Summary:\")\n",
+    "    print(f\"Total videos processed: {len(results_df)}\")\n",
+    "    print(f\"Videos trimmed: {len(results_df[results_df['trimmed']])}\")\n",
+    "    print(f\"Anomalies detected: {len(results_df[results_df['anomaly'] == 'Yes'])}\")\n",
+    "    print(f\"Processing errors: {len(results_df[results_df['anomaly'] == 'ERROR'])}\")"
    ]
   },
   {
