Mod: Presentation Modifications

--- a/Qwen Pipeline.ipynb
+++ b/Qwen Pipeline.ipynb
@@ -543,6 +543,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# !pip install opencv-python moviepy \n",
     "# !pip install gdown\n",
     "# !gdown \"https://drive.google.com/uc?export=download&id=1_zFhG7g2s4qBU0bCyVHLVyHHAa3jYmqr\"\n",
     "# !unzip shoplifting-videos.zip"
