--- a/Qwen Pipeline.ipynb
+++ b/Qwen Pipeline.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pip install numpy==1.24.4 Pillow==10.3.0 Requests==2.31.0 torch torchvision accelerate "jinja2>3.1" moviepy qwen-vl-utils av git+https://github.com/huggingface/transformers.git\n",
+    "# pip install numpy==1.24.4 Pillow==10.3.0 Requests==2.31.0 torch torchvision accelerate 'jinja2>3.1' moviepy qwen-vl-utils av git+https://github.com/huggingface/transformers.git\n",
     "# pip install git+https://github.com/huggingface/transformers@21fac7abba2a37fae86106f87fcf9974fd1e3830 accelerate\n",
     "# pip install ultralytics supervision\n",
     "# pip install pybind11\n",
